k8s/robot-dairy-c3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-dairy
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-dairy
  template:
    metadata:
      labels:
        app: robot-dairy
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-dairy-c4
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-dairy-c4
  template:
    metadata:
      labels:
        app: robot-dairy-c4
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
