k8s/robots-c3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robots
  namespace: team6
spec:
  replicas: 5
  selector:
    matchLabels:
      app: robots
  template:
    metadata:
      labels:
        app: robots
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
