k8s/robots-c4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-bread
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-bread
  template:
    metadata:
      labels:
        app: robot-bread
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-dairy
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-dairy
  template:
    metadata:
      labels:
        app: robot-dairy
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-meat
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-meat
  template:
    metadata:
      labels:
        app: robot-meat
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-produce
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-produce
  template:
    metadata:
      labels:
        app: robot-produce
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robot-party
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robot-party
  template:
    metadata:
      labels:
        app: robot-party
    spec:
      containers:
        - name: robot
          image: 192.168.1.129:5000/team6/robot-service:latest
          imagePullPolicy: Always
