k8s/inventory-c4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: 192.168.1.129:5000/team6/inventory-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
            - containerPort: 5556
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: team6
spec:
  selector:
    app: inventory
  type: NodePort
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      nodePort: 31081
    - name: zmq
      port: 5556
      targetPort: 5556
      nodePort: 31557
