k8s/pricing-c2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
  namespace: team6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
        - name: pricing
          image:  192.168.1.129:5000/team6/pricing-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: pricing
  namespace: team6
spec:
  selector:
    app: pricing
  ports:
    - name: grpc
      port: 50053
      targetPort: 50053
  type: ClusterIP
