k8s/allow-refrigerator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-refrigerator-ingress
  namespace: team6
spec:
  podSelector:
    matchLabels:
      app: refrigerator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8501
