k8s/allow-team6-core-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-team6-core-ingress
  namespace: team6
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - ordering
          - inventory
          - pricing
          - grocery-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - ports:
        - protocol: TCP
          port: 5000
