k8s/default-deny-ingress-c2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: team6
spec:
  podSelector: {}
  policyTypes:
    - Ingress
